更改文章结构

--- a/book.tex
+++ b/book.tex
@@ -7,6 +7,7 @@
 \usepackage{amssymb}
 \usepackage{times}
 \usepackage{titlesec}
+\usepackage[table]{xcolor}
 %结构化
 \graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}{./pic/example/}}
 \usepackage{subfiles}
