--- a/API/tf_common.tex
+++ b/API/tf_common.tex
@@ -50,6 +50,39 @@ DEFINE\_boolean(flag\_name,default\_value,docstring):定义一个'boolean'类型
 \item default\_value:flag的默认值，应该是字符串。
 \item docstring:用flag的一个有用的帮助信息。
 \end{itemize}
+\subsection{tf.convert\_to\_tensor}
+\begin{lstlisting}[language=Python]
+convert_to_tensor(
+    value,
+    dtype=None,
+    name=None,
+    preferred_dtype=None
+)
+\end{lstlisting}
+转换给定的value为一个Tensor。
+这个函数转转Python对象为Tensor对象，接受的Tensor对象有numpy array,Python list,Python标量。例如
+\begin{lstlisting}[language=Python]
+import numpy as np
+
+def my_func(arg):
+  arg = tf.convert_to_tensor(arg, dtype=tf.float32)
+  return tf.matmul(arg, arg) + arg
+
+# The following calls are equivalent.
+value_1 = my_func(tf.constant([[1.0, 2.0], [3.0, 4.0]]))
+value_2 = my_func([[1.0, 2.0], [3.0, 4.0]])
+value_3 = my_func(np.array([[1.0, 2.0], [3.0, 4.0]], dtype=np.float32))
+\end{lstlisting}
+这个函数在组合新的操作时很有用，如上慢的my\_func。所有的标注的Python操作构造体应用这个函数到每个输入的Tensor值，允许这些操作接受numpy数组，Python列表，标量和Tensor对象。
+\begin{itemize}
+\item value:支持转化为Tensor的数据类型
+\item dtype:返回tensor的元素类型。如果确实，类型从value推断
+\item name:如果新的Tensor被创建，这个参数决定Tensor的名字
+\item preferred\_dtype:返回tensor的元素类型选项，当dtype为None时。在一些情况下，调用器也许没有类型转化为一个tensor，因此preferred\_dtype可能用作软偏好。如果转化为preferred\_dtype不可能，这个参数将不起作用
+\item[Returns] 一个基于value的输出
+\item[Raises]:TypeError:如果没有转换对象适用与value。RuntimeError：如果转化对象的值不可用
+\end{itemize}
+
 \subsection{tf.gather}
 \begin{lstlisting}[language=Python]
 gather(
@@ -99,6 +132,84 @@ with tf.Session() as sess:
  [ 1  2  3  4]
  [ 9 10 11 12]]
 \end{lstlisting}
+\subsection{tf.one\_hot}
+\begin{lstlisting}[language=Python]
+one_hot(
+    indices,
+    depth,
+    on_value=None,
+    off_value=None,
+    axis=None,
+    dtype=None,
+    name=None
+)
+\end{lstlisting}
+返回一个one-hot tensor。
+indices位置的值由on\_value表示，其它位置的值由off\_value表示。on\_value和off\_value必须匹配数据类型，如果dtype被提供他们必须和dtype制定的类型相同。
+
+如果on\_value没有没提供，他讲默认为dtype指定的0。off\_value没有提供，他讲默认设置为dtype类型的0。
+
+如果设计日indices rank为N，输出rank将为N+1,新的轴将在axis创建（默认新的轴被添加到末尾）
+
+如果indices是一个标量，输出形状将是一个长度为depth的向量
+
+如果indices是一个长度为features的向量，输出形状将为:
+\begin{lstlisting}[language=Python]
+features x depth if axis == -1
+depth x features if axis == 0
+\end{lstlisting}
+如果indices是一个矩阵，形状为[batch,features],输出形状将为:
+\begin{lstlisting}[language=Python]
+batch x features x depth if axis == -1
+batch x depth x features if axis == 1
+depth x batch x features if axis == 0
+\end{lstlisting}
+如果dtype没有提供，将尝试假设on\_value和off\_value的类型，如果一个或者两个被传递进去。如果on\_value，off\_value是空或者dtype被提供，dtyoe将默认为tf.float32。
+\begin{quote}
+如果一个非数值类型输出被妖气，on\_value和off\_value必须提供给one\_hot。
+\end{quote}
+
+例如:
+\begin{lstlisting}[language=Python]
+indices = [0, 1, 2]
+depth = 3
+tf.one_hot(indices, depth)  # output: [3 x 3]
+# [[1., 0., 0.],
+#  [0., 1., 0.],
+#  [0., 0., 1.]]
+
+indices = [0, 2, -1, 1]
+depth = 3
+tf.one_hot(indices, depth,
+           on_value=5.0, off_value=0.0,
+           axis=-1)  # output: [4 x 3]
+# [[5.0, 0.0, 0.0],  # one_hot(0)
+#  [0.0, 0.0, 5.0],  # one_hot(2)
+#  [0.0, 0.0, 0.0],  # one_hot(-1)
+#  [0.0, 5.0, 0.0]]  # one_hot(1)
+
+indices = [[0, 2], [1, -1]]
+depth = 3
+tf.one_hot(indices, depth,
+           on_value=1.0, off_value=0.0,
+           axis=-1)  # output: [2 x 2 x 3]
+# [[[1.0, 0.0, 0.0],   # one_hot(0)
+#   [0.0, 0.0, 1.0]],  # one_hot(2)
+#  [[0.0, 1.0, 0.0],   # one_hot(1)
+#   [0.0, 0.0, 0.0]]]  # one_hot(-1)
+\end{lstlisting}
+参数:
+\begin{itemize}
+\item indices:一个索引Tensor
+\item depth:一个定义onehot维度的标量
+\item on\_value:一个定义填充在输出的标量indices[j]=i(默认为1)
+\item off\_value:一个定义填充输出的标量indices[j]!\i(默认为0)
+\item axis:一个填充的轴，默认为-1
+\item dtype:输出tensor的数据类型
+\item[Returns] output:one-hottensor
+\item[Raises]:TypeError:如果on\_value或者off\_value和dtype不匹配，或者on\_value和off\_value不匹配
+\end{itemize}
+
 \subsection{tf.placeholder}
 \begin{lstlisting}[language=Python]
 placeholder(
@@ -616,6 +727,23 @@ indices = [0, 1, 2]
 \item TypeError:如果on\_value和off\_value不合另一个匹配。
 \end{itemize}
 \end{itemize}
+\subsection{tf.tile}
+\begin{lstlisting}[language=Python]
+tile(
+    input,
+    multiples,
+    name=None
+)
+\end{lstlisting}
+用给定的tensor铺出一个tensor，通过复制input tensor multiples次。输出tensor的第i维有input.dims(i)*multiples[i]个元素，输入值被沿着i维复制multipiles[i]次。例如[a b,c,d]乘上[2]生成[a b c d a b c d]
+参数:
+\begin{itemize}
+\item input:一个Tensor，一维或者更高维度
+\item multiples:一个Tensor。必须是下面的类型:int32,int64。一维长度必须和输出维度相同。
+\item name:操作的名字(可选)
+\item[Returns]:一个Tensor，和input有相同的数据类型
+\end{itemize}
+
 \subsection{tf.unstack}
 \begin{lstlisting}[language=Python]
 unstack(
